fix minisrv